--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,12 +51,14 @@ restriction = "deny"
 nursery = "deny"
 cargo = "deny"
 
+
 arithmetic_side_effects = { level = "allow", priority = 127 }          # allow arithmatic for convenience though it could overflow
 as_conversions = { level = "allow", priority = 127 }                   # allow casting
 assertions_on_result_states = { level = "allow", priority = 127 }      # allow checking is_ok/is_err
 big_endian_bytes = { level = "allow", priority = 127 }                 # allow to_be_bytes / from_be_bytes
 blanket_clippy_restriction_lints = { level = "allow", priority = 127 } # allow setting all restrictions so we can omit specific ones
 default_numeric_fallback = { level = "allow", priority = 127 }         # allow type inferred by numeric literal
+decimal_literal_representation = { level = "allow", priority = 127 }   # It wants to have bytes in hexadecimal format, which is not a common use case
 disallowed_script_idents = { level = "allow", priority = 127 }         # skip since we use only ascii
 else_if_without_else = { level = "allow", priority = 127 }             # missing else ok
 exhaustive_enums = { level = "allow", priority = 127 }                 # revist once lib is ready to be used externally
