Simplify names of fixture types, add load/annotation/hash support to generic `TestStoredModel`, add generic `basic_test` that can be reused for other models, create separate test for file existence checks, rename tests, and allow usage of expect in result in test fixtures.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "args": [
                 "--exact",
                 "--nocapture",
-                "verify_hash"
+                "hash"
             ],
             "cwd": "${workspaceFolder}",
         },
