--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ regex = "1.11.0"
 heck = "0.5.0"
 colored = "2.1.0"
 merkle_hash = "3.7.0"
+image = "0.25.5"
+rand = "0.8.5"
+anyhow = "1.0.93"
 
 [dev-dependencies]
 tempfile = "3.13.0"
