--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ inline_asm_x86_intel_syntax = { level = "allow", priority = 127 }      # intel s
 integer_division = { level = "allow", priority = 127 }                 # allow discarding remainder
 iter_over_hash_type = { level = "allow", priority = 127 }              # allow iteartion over hash type objects when order doesn't matter
 little_endian_bytes = { level = "allow", priority = 127 }              # allow to_le_bytes / from_le_bytes
+min_ident_chars = { level = "allow", priority = 127 }                  # Allow for variables that are name a and b
 missing_asserts_for_indexing = { level = "allow", priority = 127 }     # missing assert before indexing ok
 missing_docs_in_private_items = { level = "allow", priority = 127 }    # missing docs on private ok
 missing_inline_in_public_items = { level = "allow", priority = 127 }   # let rust compiler determine best inline logic
