--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ colored = "2.1.0"
 merkle_hash = "3.7.0"
 image = "0.25.5"
 anyhow = "1.0.93"
+hashes = "0.1.9"
 
 [dev-dependencies]
 tempfile = "3.13.0"
